--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -1,7 +1,7 @@
 name: Auto-Merge Dependabot PRs
 
 on:
-    pull_request:
+    pull_request_target:
         types:
             - opened
             - synchronize
@@ -34,7 +34,3 @@ jobs:
                   gh pr merge ${{ github.event.pull_request.number }} --squash --admin --auto
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
----
-#### Explanation:
-checks under usages were annotated
