--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -9,6 +9,10 @@ on:
         types:
             - submitted
 
+permissions:
+    contents: write
+    pull-requests: write
+
 jobs:
     auto-merge:
         runs-on: ubuntu-latest
